--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="styles.css" rel="stylesheet">
-</head>
-<body>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
     <div class="header">
-    <button class="link">Information</button>
-    <a href="#" class="link">Pricing</a>
-    <button class="link">Login</button>
+      <button class="link">Information</button>
+      <a href="#" class="link">Pricing</a>
+      <button class="link">Login</button>
     </div>
-</body>
+  </body>
 </html>
