--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="header">
-      <button class="link">Information</button>
+      <div class="dropdown">
+        <button class="link">Information</button>
+        <div class="dropdown-menu">dropdown content</div>
+      </div>
+
       <a href="#" class="link">Pricing</a>
       <button class="link">Login</button>
     </div>
