--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   </head>
   <body>
     <div class="header">
-      <div class="dropdown">
-        <button class="link">Information</button>
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>Information</button>
         <div class="dropdown-menu">dropdown content</div>
       </div>
-
       <a href="#" class="link">Pricing</a>
-      <button class="link">Login</button>
+      <button class="link" data-dropdown-button>Login</button>
     </div>
   </body>
 </html>
