--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="header">
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>Information</button>
-        <div class="dropdown-menu">dropdown content</div>
+        <div class="dropdown-menu information grid">
+          
+        </div>
       </div>
       <a href="#" class="link">Pricing</a>
       <button class="link" data-dropdown-button>Login</button>
