--- a/index.html
+++ b/index.html
@@ -11,8 +11,39 @@
     <div class="header">
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>Information</button>
-        <div class="dropdown-menu information grid">
-          
+        < class="dropdown-menu information grid">
+          <div>
+            <div class="dropdown-menu-heading">free tutorials</div>
+            <div class="dropdown-links"></div>
+            <a href="#" class="link">All</a>
+            <a href="#" class="link">Last</a>
+            <a href="#" class="link">Popular</a>
+          </div>
+        
+        <div>
+          <div class="dropdown-menu-heading">courses</div>
+          <div class="dropdown-links">
+            <a href="#" class="link">Javascript</a>
+            <a href="#" class="link">CSS</a>
+            <a href="#" class="link">HTML</a>
+          </div>
+        </div>
+         <div>
+          <div class="dropdown-menu-heading">Blog</div>
+          <div class="dropdown-links">
+            <a href="#" class="link">ALL</a>
+            <a href="#" class="link">latest</a>
+            <a href="#" class="link">Popular</a>
+          </div>
+        </div>
+      </div>
+        <div>
+          <div class="dropdown-menu-heading">Other</div>
+          <div class="dropdown-links">
+            <a href="#" class="link">Twitter</a>
+            <a href="#" class="link">Newsletter</a>
+            <a href="#" class="link">Discord</a>
+          </div>
         </div>
       </div>
       <a href="#" class="link">Pricing</a>
