--- a/index.html
+++ b/index.html
@@ -11,34 +11,33 @@
     <div class="header">
       <div class="dropdown" data-dropdown>
         <button class="link" data-dropdown-button>Information</button>
-        < class="dropdown-menu information grid">
-          <div>
-            <div class="dropdown-menu-heading">free tutorials</div>
-            <div class="dropdown-links"></div>
-            <a href="#" class="link">All</a>
-            <a href="#" class="link">Last</a>
-            <a href="#" class="link">Popular</a>
-          </div>
-        
+      <div class="dropdown-menu information grid">
         <div>
-          <div class="dropdown-menu-heading">courses</div>
+          <div class="dropdown-heading">Free Tutorials</div>
+          <div class="dropdown-links">
+          <a href="#" class="link">All</a>
+          <a href="#" class="link">Last</a>
+          <a href="#" class="link">Popular</a>
+          </div>
+        </div>
+        <div>
+          <div class="dropdown-heading">courses</div>
           <div class="dropdown-links">
             <a href="#" class="link">Javascript</a>
             <a href="#" class="link">CSS</a>
-            <a href="#" class="link">HTML</a>
+            <a href="#" class="link">REAct</a>
           </div>
         </div>
-         <div>
-          <div class="dropdown-menu-heading">Blog</div>
+        <div>
+          <div class="dropdown-heading">Blog</div>
           <div class="dropdown-links">
             <a href="#" class="link">ALL</a>
             <a href="#" class="link">latest</a>
             <a href="#" class="link">Popular</a>
           </div>
         </div>
-      </div>
         <div>
-          <div class="dropdown-menu-heading">Other</div>
+          <div class="dropdown-heading">Other</div>
           <div class="dropdown-links">
             <a href="#" class="link">Twitter</a>
             <a href="#" class="link">Newsletter</a>
