--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="styles.css" rel="stylesheet" />
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="header">
-      <div class="dropdown" data-dropdown>
-        <button class="link" data-dropdown-button>Information</button>
-      <div class="dropdown-menu information grid">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <div class="header">
+    <div class="dropdown" data-dropdown>
+      <button class="link" data-dropdown-button>Information</button>
+      <div class="dropdown-menu information-grid">
         <div>
           <div class="dropdown-heading">Free Tutorials</div>
           <div class="dropdown-links">
-          <a href="#" class="link">All</a>
-          <a href="#" class="link">Last</a>
-          <a href="#" class="link">Popular</a>
+            <a href="#" class="link">All</a>
+            <a href="#" class="link">Latest</a>
+            <a href="#" class="link">Popular</a>
           </div>
         </div>
         <div>
-          <div class="dropdown-heading">courses</div>
+          <div class="dropdown-heading">Courses</div>
           <div class="dropdown-links">
-            <a href="#" class="link">Javascript</a>
+            <a href="#" class="link">JavaScript</a>
             <a href="#" class="link">CSS</a>
-            <a href="#" class="link">REAct</a>
+            <a href="#" class="link">React</a>
           </div>
         </div>
         <div>
           <div class="dropdown-heading">Blog</div>
           <div class="dropdown-links">
-            <a href="#" class="link">ALL</a>
-            <a href="#" class="link">latest</a>
+            <a href="#" class="link">All</a>
+            <a href="#" class="link">Latest</a>
             <a href="#" class="link">Popular</a>
           </div>
         </div>
@@ -45,7 +46,9 @@
           </div>
         </div>
       </div>
-      <a href="#" class="link">Pricing</a>
+    </div>
+    <a href="#" class="link">Pricing</a>
+    <div class="dropdown" data-dropdown>
       <button class="link" data-dropdown-button>Login</button>
     </div>
   </body>
