--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div>
             <div class="dropdown-heading">Free Tutorials</div>
             <div class="dropdown-links">
-              <a href="#" class="link">All</a>
+              <a href="#" class="link">Saad</a>
               <a href="#" class="link">Latest</a>
               <a href="#" class="link">Popular</a>
             </div>
